src/cli/issue/snapshots/jr__cli__issue__json_output__tests__assign_unchanged.snap
---
source: src/cli/issue/json_output.rs
expression: "assign_unchanged_response(\"TEST-1\", \"Jane Doe\", \"abc123\")"
---
{
  "assignee": "Jane Doe",
  "assignee_account_id": "abc123",
  "changed": false,
  "key": "TEST-1"
}
