src/cli/issue/snapshots/jr__cli__issue__json_output__tests__edit.snap
---
source: src/cli/issue/json_output.rs
expression: "edit_response(\"TEST-1\", &map)"
---
{
  "changed_fields": {
    "summary": "New title"
  },
  "key": "TEST-1",
  "updated": true
}
