src/cli/issue/snapshots/jr__cli__issue__json_output__tests__link.snap
---
source: src/cli/issue/json_output.rs
expression: "link_response(\"TEST-1\", \"TEST-2\", \"Blocks\")"
---
{
  "key1": "TEST-1",
  "key2": "TEST-2",
  "linked": true,
  "type": "Blocks"
}
