src/cli/issue/snapshots/jr__cli__issue__json_output__tests__move_response_changed.snap
---
source: src/cli/issue/json_output.rs
expression: "move_response(\"TEST-1\", \"In Progress\", true)"
---
{
  "changed": true,
  "key": "TEST-1",
  "status": "In Progress"
}
