src/cli/issue/snapshots/jr__cli__issue__json_output__tests__move_response_unchanged.snap
---
source: src/cli/issue/json_output.rs
expression: "move_response(\"TEST-1\", \"Done\", false)"
---
{
  "changed": false,
  "key": "TEST-1",
  "status": "Done"
}
