src/cli/issue/snapshots/jr__cli__issue__json_output__tests__remote_link.snap
---
source: src/cli/issue/json_output.rs
expression: "remote_link_response(\"TEST-1\", 10000, \"https://example.com\", \"Example\",\n\"https://example.atlassian.net/rest/api/3/issue/TEST-1/remotelink/10000\",)"
---
{
  "id": 10000,
  "key": "TEST-1",
  "self": "https://example.atlassian.net/rest/api/3/issue/TEST-1/remotelink/10000",
  "title": "Example",
  "url": "https://example.com"
}
