src/cli/issue/snapshots/jr__cli__issue__json_output__tests__unassign.snap
---
source: src/cli/issue/json_output.rs
expression: "unassign_response(\"TEST-1\", true)"
---
{
  "assignee": null,
  "changed": true,
  "key": "TEST-1"
}
