src/cli/issue/snapshots/jr__cli__issue__json_output__tests__unassign_unchanged.snap
---
source: src/cli/issue/json_output.rs
expression: "unassign_response(\"TEST-1\", false)"
---
{
  "assignee": null,
  "changed": false,
  "key": "TEST-1"
}
