src/cli/issue/snapshots/jr__cli__issue__json_output__tests__unlink_no_match.snap
---
source: src/cli/issue/json_output.rs
expression: "unlink_response(false, 0)"
---
{
  "count": 0,
  "unlinked": false
}
