src/cli/issue/snapshots/jr__cli__issue__json_output__tests__unlink_success.snap
---
source: src/cli/issue/json_output.rs
expression: "unlink_response(true, 2)"
---
{
  "count": 2,
  "unlinked": true
}
